Code/syntax.output
State 26 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | VarDec COMMA error

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT error

   16 OptTag: ID
   17       | ε

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec
   27        | ParamDec COMMA error

   28 ParamDec: Specifier VarDec
   29         | Specifier error

   30 CompSt: LC DefList StmtList RC
   31       | LC error RC

   32 StmtList: Stmt StmtList
   33         | ε

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | RETURN error SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | IF LP error RP Stmt
   41     | IF LP error RP Stmt ELSE Stmt
   42     | WHILE LP Exp RP Stmt
   43     | WHILE LP Exp RP error
   44     | Exp error
   45     | error SEMI

   46 DefList: Def DefList
   47        | ε

   48 Def: Specifier DecList SEMI
   49    | error SEMI

   50 DecList: Dec
   51        | Dec COMMA DecList
   52        | Dec COMMA error

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp
   55    | VarDec ASSIGNOP error

   56 Exp: Exp ASSIGNOP Exp
   57    | Exp AND Exp
   58    | Exp OR Exp
   59    | Exp RELOP Exp
   60    | Exp PLUS Exp
   61    | Exp MINUS Exp
   62    | Exp STAR Exp
   63    | Exp DIV Exp
   64    | LP Exp RP
   65    | MINUS Exp
   66    | NOT Exp
   67    | ID LP Args RP
   68    | ID LP RP
   69    | ID LP error RP
   70    | Exp LB Exp RB
   71    | Exp LB error RB
   72    | Exp RELOP error
   73    | Exp DOT ID
   74    | ID
   75    | INT
   76    | FLOAT

   77 Args: Exp COMMA Args
   78     | Exp
   79     | Exp COMMA error


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 10 15 21 24 27 29 31 37 40 41 43 44 45 49 52 55 69 71 72 79
    ID <node> (258) 16 18 19 22 23 24 67 68 69 73 74
    TYPE <node> (259) 11
    INT <node> (260) 20 75
    FLOAT <node> (261) 76
    SEMI <node> (262) 4 5 7 34 36 37 45 48 49
    COMMA <node> (263) 9 10 25 27 51 52 77 79
    ASSIGNOP <node> (264) 54 55 56
    RELOP <node> (265) 59 72
    PLUS <node> (266) 60
    MINUS <node> (267) 61 65
    STAR <node> (268) 62
    DIV <node> (269) 63
    AND <node> (270) 57
    OR <node> (271) 58
    DOT <node> (272) 73
    NOT <node> (273) 66
    LP <node> (274) 22 23 24 38 39 40 41 42 43 64 67 68 69
    RP <node> (275) 22 23 24 38 39 40 41 42 43 64 67 68 69
    LB <node> (276) 20 21 70 71
    RB <node> (277) 20 21 70 71
    LC <node> (278) 13 30 31
    RC <node> (279) 13 30 31
    STRUCT <node> (280) 13 14 15
    RETURN <node> (281) 36 37
    IF <node> (282) 38 39 40 41
    ELSE <node> (283) 39 41
    WHILE <node> (284) 42 43
    LOWER_THAN_ELSE (285)
    UMINUS (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (35)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <node> (36)
        on left: 8 9 10
        on right: 4 9
    Specifier <node> (37)
        on left: 11 12
        on right: 4 5 6 28 29 48
    StructSpecifier <node> (38)
        on left: 13 14 15
        on right: 12
    OptTag <node> (39)
        on left: 16 17
        on right: 13
    Tag <node> (40)
        on left: 18
        on right: 14
    VarDec <node> (41)
        on left: 19 20 21
        on right: 8 9 10 20 21 28 53 54 55
    FunDec <node> (42)
        on left: 22 23 24
        on right: 6
    VarList <node> (43)
        on left: 25 26 27
        on right: 22 25
    ParamDec <node> (44)
        on left: 28 29
        on right: 25 26 27
    CompSt <node> (45)
        on left: 30 31
        on right: 6 35
    StmtList <node> (46)
        on left: 32 33
        on right: 30 32
    Stmt <node> (47)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 32 38 39 40 41 42
    DefList <node> (48)
        on left: 46 47
        on right: 13 30 46
    Def <node> (49)
        on left: 48 49
        on right: 46
    DecList <node> (50)
        on left: 50 51 52
        on right: 48 51
    Dec <node> (51)
        on left: 53 54 55
        on right: 50 51 52
    Exp <node> (52)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 34 36 38 39 42 43 44 54 56 57 58 59 60 61 62 63 64 65 66 70 71 72 73 77 78 79
    Args <node> (53)
        on left: 77 78 79
        on right: 67 77


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE •

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT • OptTag LC DefList RC
   14                | STRUCT • Tag
   15                | STRUCT • error

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 17 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    ID    shift, and go to state 16
    SEMI  shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier •

    $default  reduce using rule 12 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   15 StructSpecifier: STRUCT error •

    $default  reduce using rule 15 (StructSpecifier)


State 11

   16 OptTag: ID •
   18 Tag: ID •

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 12

   13 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 21


State 13

   14 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 14 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

   19 VarDec: ID •
   22 FunDec: ID • LP VarList RP
   23       | ID • LP RP
   24       | ID • LP error RP

    LP  shift, and go to state 22

    $default  reduce using rule 19 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 23


State 19

    8 ExtDecList: VarDec •
    9           | VarDec • COMMA ExtDecList
   10           | VarDec • COMMA error
   20 VarDec: VarDec • LB INT RB
   21       | VarDec • LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 21

   13 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 47 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 22

   22 FunDec: ID LP • VarList RP
   23       | ID LP • RP
   24       | ID LP • error RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 23

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 24

    9 ExtDecList: VarDec COMMA • ExtDecList
   10           | VarDec COMMA • error

    error  shift, and go to state 37
    ID     shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 25

   20 VarDec: VarDec LB • INT RB
   21       | VarDec LB • error RB

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 26

   30 CompSt: LC • DefList StmtList RC
   31       | LC • error RC

    error   shift, and go to state 42
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 47 (DefList)]
    ID      reduce using rule 47 (DefList)
    INT     reduce using rule 47 (DefList)
    FLOAT   reduce using rule 47 (DefList)
    MINUS   reduce using rule 47 (DefList)
    NOT     reduce using rule 47 (DefList)
    LP      reduce using rule 47 (DefList)
    LC      reduce using rule 47 (DefList)
    RC      reduce using rule 47 (DefList)
    RETURN  reduce using rule 47 (DefList)
    IF      reduce using rule 47 (DefList)
    WHILE   reduce using rule 47 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 31


State 27

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 28

   49 Def: error • SEMI

    SEMI  shift, and go to state 44


State 29

   48 Def: Specifier • DecList SEMI

    ID  shift, and go to state 38

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 48


State 31

   46 DefList: Def • DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 47 (DefList)]
    ID      reduce using rule 47 (DefList)
    INT     reduce using rule 47 (DefList)
    FLOAT   reduce using rule 47 (DefList)
    MINUS   reduce using rule 47 (DefList)
    NOT     reduce using rule 47 (DefList)
    LP      reduce using rule 47 (DefList)
    LC      reduce using rule 47 (DefList)
    RC      reduce using rule 47 (DefList)
    RETURN  reduce using rule 47 (DefList)
    IF      reduce using rule 47 (DefList)
    WHILE   reduce using rule 47 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 31


State 32

   24 FunDec: ID LP error • RP

    RP  shift, and go to state 50


State 33

   23 FunDec: ID LP RP •

    $default  reduce using rule 23 (FunDec)


State 34

   28 ParamDec: Specifier • VarDec
   29         | Specifier • error

    error  shift, and go to state 51
    ID     shift, and go to state 38

    VarDec  go to state 52


State 35

   22 FunDec: ID LP VarList • RP

    RP  shift, and go to state 53


State 36

   25 VarList: ParamDec • COMMA VarList
   26        | ParamDec •
   27        | ParamDec • COMMA error

    COMMA  shift, and go to state 54

    $default  reduce using rule 26 (VarList)


State 37

   10 ExtDecList: VarDec COMMA error •

    $default  reduce using rule 10 (ExtDecList)


State 38

   19 VarDec: ID •

    $default  reduce using rule 19 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 40

   21 VarDec: VarDec LB error • RB

    RB  shift, and go to state 55


State 41

   20 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 56


State 42

   31 CompSt: LC error • RC
   49 Def: error • SEMI

    SEMI  shift, and go to state 44
    RC    shift, and go to state 57


State 43

   30 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 58
    ID      shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 26
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


State 44

   49 Def: error SEMI •

    $default  reduce using rule 49 (Def)


State 45

   20 VarDec: VarDec • LB INT RB
   21       | VarDec • LB error RB
   53 Dec: VarDec •
   54    | VarDec • ASSIGNOP Exp
   55    | VarDec • ASSIGNOP error

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 25

    $default  reduce using rule 53 (Dec)


State 46

   48 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 73


State 47

   50 DecList: Dec •
   51        | Dec • COMMA DecList
   52        | Dec • COMMA error

    COMMA  shift, and go to state 74

    $default  reduce using rule 50 (DecList)


State 48

   13 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 13 (StructSpecifier)


State 49

   46 DefList: Def DefList •

    $default  reduce using rule 46 (DefList)


State 50

   24 FunDec: ID LP error RP •

    $default  reduce using rule 24 (FunDec)


State 51

   29 ParamDec: Specifier error •

    $default  reduce using rule 29 (ParamDec)


State 52

   20 VarDec: VarDec • LB INT RB
   21       | VarDec • LB error RB
   28 ParamDec: Specifier VarDec •

    LB  shift, and go to state 25

    $default  reduce using rule 28 (ParamDec)


State 53

   22 FunDec: ID LP VarList RP •

    $default  reduce using rule 22 (FunDec)


State 54

   25 VarList: ParamDec COMMA • VarList
   27        | ParamDec COMMA • error

    error   shift, and go to state 75
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 36


State 55

   21 VarDec: VarDec LB error RB •

    $default  reduce using rule 21 (VarDec)


State 56

   20 VarDec: VarDec LB INT RB •

    $default  reduce using rule 20 (VarDec)


State 57

   31 CompSt: LC error RC •

    $default  reduce using rule 31 (CompSt)


State 58

   45 Stmt: error • SEMI

    SEMI  shift, and go to state 77


State 59

   67 Exp: ID • LP Args RP
   68    | ID • LP RP
   69    | ID • LP error RP
   74    | ID •

    LP  shift, and go to state 78

    $default  reduce using rule 74 (Exp)


State 60

   75 Exp: INT •

    $default  reduce using rule 75 (Exp)


State 61

   76 Exp: FLOAT •

    $default  reduce using rule 76 (Exp)


State 62

   65 Exp: MINUS • Exp

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 79


State 63

   66 Exp: NOT • Exp

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 80


State 64

   64 Exp: LP • Exp RP

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 81


State 65

   36 Stmt: RETURN • Exp SEMI
   37     | RETURN • error SEMI

    error  shift, and go to state 82
    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 83


State 66

   38 Stmt: IF • LP Exp RP Stmt
   39     | IF • LP Exp RP Stmt ELSE Stmt
   40     | IF • LP error RP Stmt
   41     | IF • LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 84


State 67

   42 Stmt: WHILE • LP Exp RP Stmt
   43     | WHILE • LP Exp RP error

    LP  shift, and go to state 85


State 68

   35 Stmt: CompSt •

    $default  reduce using rule 35 (Stmt)


State 69

   30 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 86


State 70

   32 StmtList: Stmt • StmtList

    error   shift, and go to state 58
    ID      shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 26
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 87
    Stmt      go to state 70
    Exp       go to state 71


State 71

   34 Stmt: Exp • SEMI
   44     | Exp • error
   56 Exp: Exp • ASSIGNOP Exp
   57    | Exp • AND Exp
   58    | Exp • OR Exp
   59    | Exp • RELOP Exp
   60    | Exp • PLUS Exp
   61    | Exp • MINUS Exp
   62    | Exp • STAR Exp
   63    | Exp • DIV Exp
   70    | Exp • LB Exp RB
   71    | Exp • LB error RB
   72    | Exp • RELOP error
   73    | Exp • DOT ID

    error     shift, and go to state 88
    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 72

   54 Dec: VarDec ASSIGNOP • Exp
   55    | VarDec ASSIGNOP • error

    error  shift, and go to state 100
    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 101


State 73

   48 Def: Specifier DecList SEMI •

    $default  reduce using rule 48 (Def)


State 74

   51 DecList: Dec COMMA • DecList
   52        | Dec COMMA • error

    error  shift, and go to state 102
    ID     shift, and go to state 38

    VarDec   go to state 45
    DecList  go to state 103
    Dec      go to state 47


State 75

   27 VarList: ParamDec COMMA error •

    $default  reduce using rule 27 (VarList)


State 76

   25 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 25 (VarList)


State 77

   45 Stmt: error SEMI •

    $default  reduce using rule 45 (Stmt)


State 78

   67 Exp: ID LP • Args RP
   68    | ID LP • RP
   69    | ID LP • error RP

    error  shift, and go to state 104
    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    RP     shift, and go to state 105

    Exp   go to state 106
    Args  go to state 107


State 79

   56 Exp: Exp • ASSIGNOP Exp
   57    | Exp • AND Exp
   58    | Exp • OR Exp
   59    | Exp • RELOP Exp
   60    | Exp • PLUS Exp
   61    | Exp • MINUS Exp
   62    | Exp • STAR Exp
   63    | Exp • DIV Exp
   65    | MINUS Exp •
   70    | Exp • LB Exp RB
   71    | Exp • LB error RB
   72    | Exp • RELOP error
   73    | Exp • DOT ID

    DOT  shift, and go to state 98
    LB   shift, and go to state 99

    $default  reduce using rule 65 (Exp)


State 80

   56 Exp: Exp • ASSIGNOP Exp
   57    | Exp • AND Exp
   58    | Exp • OR Exp
   59    | Exp • RELOP Exp
   60    | Exp • PLUS Exp
   61    | Exp • MINUS Exp
   62    | Exp • STAR Exp
   63    | Exp • DIV Exp
   66    | NOT Exp •
   70    | Exp • LB Exp RB
   71    | Exp • LB error RB
   72    | Exp • RELOP error
   73    | Exp • DOT ID
